--- a/.github/workflows/waka-coding-stats-workflow.yml
+++ b/.github/workflows/waka-coding-stats-workflow.yml
@@ -15,11 +15,11 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_TITLE: true
-          BLOCKS: ->
-          TIME_RANGE: all_time
-          SHOW_TIME: true
-          SHOW_MASKED_TIME: true
-          SHOW_DAYS_OF_WEEK: true
-          SHOW_LANGUAGE: true
-          SHOW_LANGUAGE_PER_REPO: true
+          # SHOW_TITLE: true
+          # BLOCKS: ->
+          # TIME_RANGE: all_time
+          # SHOW_TIME: true
+          # SHOW_MASKED_TIME: true
+          # SHOW_DAYS_OF_WEEK: true
+          # SHOW_LANGUAGE: true
+          # SHOW_LANGUAGE_PER_REPO: true
